=== 0.4 ===
2011-04-26  Aki Sasaki  <aki@mozilla.com>

* scripts/sourcetool.py: Moved from scripts/hgtool.py.

* test/test_log.py (TestLog.test_console_log): Removed method.
    Coverage didn't change at all (console logging is tested in test_script.py) but we removed a spurious line of output from unit.sh.

* mozharness/base/log.py (LogMixin.warn): Removed method.
    Also removed references to it.

* mozharness/base/script.py (ShellMixin.get_output_from_command):
    fixed the NamedTemporaryFile issue between 2.5 and 2.6, by allowing you to name your own tmpfile if you want to munge the contents later.

* mozharness/base/script.py (BaseScript):
    Pulled all os and shell methods out to mixins.

* mozharness/base/vcs/mercurial.py (MercurialVCS): Added class.
    This will hopefully be a standalone object that takes the baseScript log_obj and perhaps config, but will allow for multiple VCS objects per BaseScript.
    First pass: changed standalone functions to a MercurialVCS object.

2011-04-25  Aki Sasaki  <aki@mozilla.com>

* mozharness/base/log.py (BaseLogger.log_message): Renamed from log() to be compatible with LogMixin.

* mozharness/base/log.py (LogMixin): New class.
    Pull the generic logging methods from BaseScript to this new class.
    This is specifically to allow for non-BaseScript objects to use the log_obj from BaseScript (set a LogMixin's self.log_obj to the logging object)

* mozharness/base/script.py (BaseScript):
    Pull the generic logging methods from BaseScript to a new LogMixin class.
    Change BaseScript to inherit LogMixin by default.

* mozharness/base/config.py (BaseConfig.parse_args):
    Fixed the args list sent to parse_args (sys.argv[1:])
    Set self.options and self.args after parse_args for later access in BaseScript._pre_config_lock

* mozharness/base/config.py (ExtendedOptionParser):
    Removed self.variables hack and add_option override.

* mozharness/base/script.py (__init__):